--- a/notebooks/04_concat.ipynb
+++ b/notebooks/04_concat.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -91,7 +91,7 @@
        "((12961, 20), (12961, 20), (12961, 40))"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -113,7 +113,7 @@
        "20"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -135,7 +135,7 @@
        "True"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -164,7 +164,7 @@
        "40"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -236,7 +236,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -254,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
@@ -265,14 +265,114 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['data/neighborhood/outputFiles/auction_0.csv',\n",
+       " 'data/neighborhood/outputFiles/house:air_temperature.csv',\n",
+       " 'data/neighborhood/outputFiles/house:cooling_setpoint.csv',\n",
+       " 'data/neighborhood/outputFiles/house:heating_setpoint.csv',\n",
+       " 'data/neighborhood/outputFiles/house:hvac_power.imag.csv',\n",
+       " 'data/neighborhood/outputFiles/house:hvac_power.real.csv',\n",
+       " 'data/neighborhood/outputFiles/house:incident_solar_radiation.csv',\n",
+       " 'data/neighborhood/outputFiles/house:mass_temperature.csv',\n",
+       " 'data/neighborhood/outputFiles/house:outdoor_temperature.csv',\n",
+       " 'data/neighborhood/outputFiles/inverter_0.csv',\n",
+       " 'data/neighborhood/outputFiles/inverter_1.csv',\n",
+       " 'data/neighborhood/outputFiles/inverter_2.csv',\n",
+       " 'data/neighborhood/outputFiles/inverter_3.csv',\n",
+       " 'data/neighborhood/outputFiles/inverter_4.csv',\n",
+       " 'data/neighborhood/outputFiles/inverter_5.csv',\n",
+       " 'data/neighborhood/outputFiles/inverter_6.csv',\n",
+       " 'data/neighborhood/outputFiles/inverter_7.csv',\n",
+       " 'data/neighborhood/outputFiles/inverter_8.csv',\n",
+       " 'data/neighborhood/outputFiles/inverter_9.csv',\n",
+       " 'data/neighborhood/outputFiles/triplex_meter:measured_reactive_power.csv',\n",
+       " 'data/neighborhood/outputFiles/triplex_meter:measured_real_power.csv',\n",
+       " 'data/neighborhood/outputFiles/triplex_meter:monthly_bill.csv',\n",
+       " 'data/neighborhood/outputFiles/triplex_meter:monthly_energy.csv',\n",
+       " 'data/neighborhood/outputFiles/triplex_meter:price.csv']"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "filenames = glob.glob('data/neighborhood/outputFiles/*.csv')\n",
+    "filenames"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "data/neighborhood/outputFiles/auction_0.csv\n",
+      "data/neighborhood/outputFiles/house:air_temperature.csv\n",
+      "data/neighborhood/outputFiles/house:cooling_setpoint.csv\n",
+      "data/neighborhood/outputFiles/house:heating_setpoint.csv\n",
+      "data/neighborhood/outputFiles/house:hvac_power.imag.csv\n",
+      "data/neighborhood/outputFiles/house:hvac_power.real.csv\n",
+      "data/neighborhood/outputFiles/house:incident_solar_radiation.csv\n",
+      "data/neighborhood/outputFiles/house:mass_temperature.csv\n",
+      "data/neighborhood/outputFiles/house:outdoor_temperature.csv\n",
+      "data/neighborhood/outputFiles/inverter_0.csv\n",
+      "data/neighborhood/outputFiles/inverter_1.csv\n",
+      "data/neighborhood/outputFiles/inverter_2.csv\n",
+      "data/neighborhood/outputFiles/inverter_3.csv\n",
+      "data/neighborhood/outputFiles/inverter_4.csv\n",
+      "data/neighborhood/outputFiles/inverter_5.csv\n",
+      "data/neighborhood/outputFiles/inverter_6.csv\n",
+      "data/neighborhood/outputFiles/inverter_7.csv\n",
+      "data/neighborhood/outputFiles/inverter_8.csv\n",
+      "data/neighborhood/outputFiles/inverter_9.csv\n",
+      "data/neighborhood/outputFiles/triplex_meter:measured_reactive_power.csv\n",
+      "data/neighborhood/outputFiles/triplex_meter:measured_real_power.csv\n",
+      "data/neighborhood/outputFiles/triplex_meter:monthly_bill.csv\n",
+      "data/neighborhood/outputFiles/triplex_meter:monthly_energy.csv\n",
+      "data/neighborhood/outputFiles/triplex_meter:price.csv\n"
+     ]
+    }
+   ],
+   "source": [
+    "def print_func(x):\n",
+    "    print(x)\n",
     "\n",
+    "_ = [ print_func(x) for x in filenames]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(12961, 285)"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
     "def read_dir(filenames):\n",
     "    return pd.concat([ read_csv(x) for x in filenames ], axis=1)\n",
     "\n",
@@ -765,7 +865,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false
    },
@@ -800,7 +900,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 21,
    "metadata": {
     "collapsed": false
    },
@@ -820,7 +920,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 22,
    "metadata": {
     "collapsed": false
    },
@@ -831,7 +931,7 @@
        "(12961, 285)"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -842,6 +942,15 @@
     "\n",
     "utils.read_dir(filenames).shape"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
