--- a/notebooks/09_toolz.ipynb
+++ b/notebooks/09_toolz.ipynb
@@ -15303,12 +15303,25 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 173,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "from cytoolz import pipe"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "pipe()"
+   ]
   }
  ],
  "metadata": {
